Se añaden los parametros de r, teta y phi. Adicional a esto se suben los metodos de los operadores para los vectores polares

--- a/Tarea2.ipynb
+++ b/Tarea2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -66,15 +66,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "vec1 = [1.0,1.0,1.0]\nvec2 = [3.0,2.0,2.0]\nvec1 + vec2 = [4.0,3.0,3.0]\nvec1 - vec2 = [-2.0,-1.0,-1.0]\nEl producto interno entre el vector 1 y el vector 2 es:  7.0\nvec1 x vec2 = [0.0,1.0,-1.0]\nLa tercera coordenada del vector vec6 = vec1 x vec2 es:  -1.0\nvec9 = [1.0,1.0,1.0]\nlos vec1 y vec9  son iguales uwu\nlos vec1 y vec2  son distintos u.u\nla magnitud del vector 1 es: 1.7320508075688772\n"
+     "output_type": "stream",
+     "text": [
+      "vec1 = [1.0,1.0,1.0]\n",
+      "vec2 = [3.0,2.0,2.0]\n",
+      "vec1 + vec2 = [4.0,3.0,3.0]\n",
+      "vec1 - vec2 = [-2.0,-1.0,-1.0]\n",
+      "El producto interno entre el vector 1 y el vector 2 es:  7.0\n",
+      "vec1 x vec2 = [0.0,1.0,-1.0]\n",
+      "La tercera coordenada del vector vec6 = vec1 x vec2 es:  -1.0\n",
+      "vec9 = [1.0,1.0,1.0]\n",
+      "los vec1 y vec9  son iguales uwu\n",
+      "los vec1 y vec2  son distintos u.u\n",
+      "la magnitud del vector 1 es: 1.7320508075688772\n"
+     ]
     }
    ],
    "source": [
@@ -126,15 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "vecpol1=  [2.9999999999999996,0.0,-0.1019105262112412]\nvecpol2=  [9.0,-0.589224525241024,-0.6907507049784977]\nla magnitud del vec1 en coordenadas esfericas es:  1.7320508075688772 podemos ver que permanece constante\n"
+     "output_type": "stream",
+     "text": [
+      "vecpol1=  [2.9999999999999996,0.0,-0.1019105262112412]\n",
+      "vecpol2=  [9.0,-0.589224525241024,-0.6907507049784977]\n",
+      "la magnitud del vec1 en coordenadas esfericas es:  1.7320508075688772 podemos ver que permanece constante\n",
+      "[12.0,-0.589224525241024,-0.7926612311897389]\n"
+     ]
     }
    ],
    "source": [
@@ -153,6 +170,13 @@
     "        else:\n",
     "            self.phi=np.arctan(self.y/self.x)\n",
     "        \n",
+    "        if self.r<0:\n",
+    "            print(\"la coordenada r esta fuera del rango, introducir valores de r distintos de 0\")\n",
+    "        if np.pi < self.teta or self.teta<0:\n",
+    "            print(\"la coordenada theta esta fuera del rango\")\n",
+    "        if 2 * np.pi < self.phi  or self.phi <0 :\n",
+    "            print(\"la coordenada phi esta fuera del rango\")\n",
+    "        \n",
     "        \n",
     "\n",
     "        #----Ahora para los vectores unitarios:\n",
@@ -160,35 +184,84 @@
     "        self.ru= np.sin(self.teta)*np.cos(self.phi) + np.sin(self.teta)*np.sin(self.phi) + np.cos(self.teta) #r gorrito\n",
     "        self.tetau= np.cos(self.teta)*np.cos(self.phi) + np.cos(self.teta)*np.sin(self.phi) - np.sin(self.teta) #teta gorrito\n",
     "        self.phiu= -np.sin(self.phi)+ np.cos(self.teta) #phi gorrito\n",
+    "    \n",
+    "        self.rr=self.r*self.ru\n",
+    "        self.tt=self.teta*self.tetau\n",
+    "        self.pp=self.phi*self.phiu\n",
+    "    \n",
+    "    def __add__(self,other):\n",
+    "        '''Sobrecarga del operador suma'''\n",
+    "        return VectorCartesiano(self.rr + other.rr, self.tt + other.tt, self.pp + other.pp)\n",
+    "           \n",
+    "    def __sub__(self,other):        \n",
+    "        '''Sobrecarga del operador resta'''\n",
+    "        return VectorCartesiano(self.rr - other.rr, self.tt - other.tt, self.pp - other.pp)\n",
+    "    \n",
+    "    def __mul__(self,other):\n",
+    "        '''Sobrecarga del operador multiplicacion para hacer el producto interno'''\n",
+    "        return (self.rr * other.rr + self.tt * other.tt + self.pp * other.pp) \n",
+    "    \n",
+    "    def Cruz(self,other):\n",
+    "        \"\"\"Creamos el metodo para el producto cruz\"\"\"\n",
+    "        return VectorCartesiano((self.tt * other.pp) - (self.pp * other.tt ) , -((self.rr * other.pp) - (self.pp * other.rr )), (self.rr * other.tt) - (self.tt * other.rr ))\n",
     "\n",
+    "        \n",
+    "    def __getitem__(self,i):\n",
+    "        \"\"\"Esta operador me imprime la coordenada que se desea\"\"\"\n",
+    "        print ( self.vector[i])\n",
+    "  \n",
+    "    def __eq__(self, other):\n",
+    "        \"\"\"Este operador nos permite saber si dos vectores son iguales\"\"\"\n",
+    "        if (self.rr==other.rr and self.tt==other.tt and self.pp==other.pp):\n",
+    "            print(\" son iguales uwu\")\n",
+    "        else:\n",
+    "            print (\" son distintos u.u\")\n",
+    "    \n",
+    "    def magnitud(self):\n",
+    "        \"\"\"Este metodo me da la magnitud del vector\"\"\"\n",
+    "        \n",
+    "        print (self.mag)\n",
     "    def Printpol(self):\n",
     "        '''Imprime el vector en coordenadas esfericas'''\n",
-    "        self.x=self.r*self.ru\n",
-    "        self.y=self.teta*self.tetau\n",
-    "        self.z=self.phi*self.phiu\n",
-    "        print(f\"[{self.x},{self.y},{self.z}]\")\n",
+    "        \n",
+    "        print(f\"[{self.rr},{self.tt},{self.pp}]\")\n",
     "\n",
-    "vec1=VectorPolar(1,1,1)\n",
+    "vecpol1=VectorPolar(1,1,1)\n",
     "print (\"vecpol1= \", end=\" \")\n",
-    "vec1.Printpol()\n",
+    "vecpol1.Printpol()\n",
     "print (\"vecpol2= \", end=\" \")\n",
     "vecpol2=VectorPolar(2,5,2)\n",
     "vecpol2.Printpol()\n",
-    "print(\"la magnitud del vec1 en coordenadas esfericas es: \",vecpol.mag , \"podemos ver que permanece constante\")  #notese que vec1 = vecpol1\n",
-    "\n"
+    "print(\"la magnitud del vec1 en coordenadas esfericas es: \",vecpol1.mag , \"podemos ver que permanece constante\")  #notese que vec1 = vecpol1\n",
+    "\n",
+    "vecc=vecpol1+vecpol2\n",
+    "vecc.Print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Vector a en sistema esferico [3.9000000000000004,0.17763422701115406,0.0]\nVector b en sistema esferico [10.000000000000009,0.09776036644348168,0.0]\nVector c en sistema esferico [4.250000000000001,-1.5707963267948963,-0.0001417066201953142]\nEl producto a.c=  21.599999999999998\na.c=  6.300000000000001\nb.c=  0.05\na x b = [-2.4,-13.5,1.5]\na x c = [-0.12,10.08,0.07500000000000001]\nb x c = [-0.45,37.800000000000004,-4.2]\nEl angulo entre a y c es:  1.0122412946803023 radianes\nEl angulo entre a y b es:  0.5683100543147127 radianes\nEl angulo entre b y c es:  1.569481758540766 radianes\n"
+     "output_type": "stream",
+     "text": [
+      "Vector a en sistema esferico [3.9000000000000004,0.17763422701115406,0.0]\n",
+      "Vector b en sistema esferico [10.000000000000009,0.09776036644348168,0.0]\n",
+      "Vector c en sistema esferico [4.250000000000001,-1.5707963267948963,-0.0001417066201953142]\n",
+      "El producto a.c=  21.599999999999998\n",
+      "a.c=  6.300000000000001\n",
+      "b.c=  0.05\n",
+      "a x b = [-2.4,-13.5,1.5]\n",
+      "a x c = [-0.12,10.08,0.07500000000000001]\n",
+      "b x c = [-0.45,37.800000000000004,-4.2]\n",
+      "El angulo entre a y c es:  1.0122412946803023 radianes\n",
+      "El angulo entre a y b es:  0.5683100543147127 radianes\n",
+      "El angulo entre b y c es:  1.569481758540766 radianes\n"
+     ]
     }
    ],
    "source": [
@@ -246,7 +319,8 @@
     "print(\"El angulo entre a y b es: \", angab, \"radianes\")\n",
     "\n",
     "angbc=np.arccos(bc/(b.mag*c.mag))\n",
-    "print(\"El angulo entre b y c es: \", angbc, \"radianes\")"
+    "print(\"El angulo entre b y c es: \", angbc, \"radianes\")\n",
+    "\n"
    ]
   },
   {
@@ -262,6 +336,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
